// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App save to storage should set storage on save button click 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <button
      id="my-button-one"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
    >
      Button1
    </button>
    <button
      id="my-button-two"
      onClick={[Function]}
    >
      Button2
    </button>
  </header>
</div>
`;

exports[`App should be possible to activate button with Spacebar 1`] = `
<App>
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <button
        id="my-button-one"
      >
        Button1
      </button>
      <button
        id="my-button-two"
        onClick={[Function]}
      >
        Button2
      </button>
    </header>
  </div>
</App>
`;

exports[`App should render banner text correctly with given strings 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <button
      id="my-button-one"
    >
      Button1
    </button>
    <button
      id="my-button-two"
      onClick={[Function]}
    >
      Button2
    </button>
  </header>
</div>
`;

exports[`App should render correctly in "debug" mode 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <button
      id="my-button-one"
    >
      Button1
    </button>
    <button
      id="my-button-two"
      onClick={[Function]}
    >
      Button2
    </button>
  </header>
</div>
`;

exports[`App should render correctly with no props 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <button
      id="my-button-one"
    >
      Button1
    </button>
    <button
      id="my-button-two"
      onClick={[Function]}
    >
      Button2
    </button>
  </header>
</div>
`;
